include_HEADERS = \
	libfshfs.h

pkginclude_HEADERS = \
	libfshfs/codepage.h \
	libfshfs/definitions.h \
	libfshfs/error.h \
	libfshfs/extern.h \
	libfshfs/features.h \
	libfshfs/types.h

EXTRA_DIST = \
	libfshfs.h.in \
	libfshfs/definitions.h.in \
	libfshfs/features.h.in \
	libfshfs/types.h.in

DISTCLEANFILES = \
	libfshfs.h \
	libfshfs/definitions.h \
	libfshfs/features.h \
	libfshfs/types.h \
	Makefile \
	Makefile.in

