MSVSCPP_FILES = \
	fshfs_test_allocation_block/fshfs_test_allocation_block.vcproj \
	fshfs_test_btree_file/fshfs_test_btree_file.vcproj \
	fshfs_test_btree_node/fshfs_test_btree_node.vcproj \
	fshfs_test_error/fshfs_test_error.vcproj \
	fshfs_test_file_record/fshfs_test_file_record.vcproj \
	fshfs_test_fork_descriptor/fshfs_test_fork_descriptor.vcproj \
	fshfs_test_io_handle/fshfs_test_io_handle.vcproj \
	fshfs_test_notify/fshfs_test_notify.vcproj \
	fshfs_test_support/fshfs_test_support.vcproj \
	fshfs_test_thread_record/fshfs_test_thread_record.vcproj \
	fshfs_test_volume/fshfs_test_volume.vcproj \
	fshfsinfo/fshfsinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfshfs/libfshfs.vcproj \
	libuna/libuna.vcproj \
	pyfshfs/pyfshfs.vcproj \
	libfshfs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

