MSVSCPP_FILES = \
	fshfs_test_attribute_record/fshfs_test_attribute_record.vcproj \
	fshfs_test_attributes_btree_key/fshfs_test_attributes_btree_key.vcproj \
	fshfs_test_bit_stream/fshfs_test_bit_stream.vcproj \
	fshfs_test_btree_file/fshfs_test_btree_file.vcproj \
	fshfs_test_btree_header/fshfs_test_btree_header.vcproj \
	fshfs_test_btree_node/fshfs_test_btree_node.vcproj \
	fshfs_test_btree_node_descriptor/fshfs_test_btree_node_descriptor.vcproj \
	fshfs_test_btree_node_record/fshfs_test_btree_node_record.vcproj \
	fshfs_test_buffer_data_handle/fshfs_test_buffer_data_handle.vcproj \
	fshfs_test_catalog_btree_key/fshfs_test_catalog_btree_key.vcproj \
	fshfs_test_compressed_data_handle/fshfs_test_compressed_data_handle.vcproj \
	fshfs_test_compression/fshfs_test_compression.vcproj \
	fshfs_test_deflate/fshfs_test_deflate.vcproj \
	fshfs_test_directory_entry/fshfs_test_directory_entry.vcproj \
	fshfs_test_directory_record/fshfs_test_directory_record.vcproj \
	fshfs_test_error/fshfs_test_error.vcproj \
	fshfs_test_extent/fshfs_test_extent.vcproj \
	fshfs_test_extents_btree_key/fshfs_test_extents_btree_key.vcproj \
	fshfs_test_file_entry/fshfs_test_file_entry.vcproj \
	fshfs_test_file_record/fshfs_test_file_record.vcproj \
	fshfs_test_file_system/fshfs_test_file_system.vcproj \
	fshfs_test_fork_descriptor/fshfs_test_fork_descriptor.vcproj \
	fshfs_test_huffman_tree/fshfs_test_huffman_tree.vcproj \
	fshfs_test_io_handle/fshfs_test_io_handle.vcproj \
	fshfs_test_master_directory_block/fshfs_test_master_directory_block.vcproj \
	fshfs_test_name/fshfs_test_name.vcproj \
	fshfs_test_notify/fshfs_test_notify.vcproj \
	fshfs_test_profiler/fshfs_test_profiler.vcproj \
	fshfs_test_support/fshfs_test_support.vcproj \
	fshfs_test_thread_record/fshfs_test_thread_record.vcproj \
	fshfs_test_tools_info_handle/fshfs_test_tools_info_handle.vcproj \
	fshfs_test_tools_output/fshfs_test_tools_output.vcproj \
	fshfs_test_tools_signal/fshfs_test_tools_signal.vcproj \
	fshfs_test_volume/fshfs_test_volume.vcproj \
	fshfs_test_volume_header/fshfs_test_volume_header.vcproj \
	fshfsinfo/fshfsinfo.vcproj \
	fshfsmount/fshfsmount.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfmos/libfmos.vcproj \
	libfshfs/libfshfs.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	pyfshfs/pyfshfs.vcproj \
	zlib/zlib.vcproj \
	libfshfs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

